# VisionForge-Pro

./: .gitignore  .gitlab-ci.yml  004e3949-b0bb-4c3c-af2b-de05e271396e.gshm  ADVANCED_OPTIMIZATION_SUMMARY.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  DEBUGGING_MANUAL.md  DEPENDENCIES.md  Doxyfile  INDUSTRIAL_OPTIMIZATION_REPORT.md  LICENSE  OPTIMIZATION_SUMMARY.md  PARALLEL_OPTIMIZATION_GUIDE.md  Project Review and Optimization.md  README.md  RELEASE_v1.1.0.md  RELEASE_v1.2.0.md  VS2022_EXPERIMENTAL_SETUP.md  build_debug.bat  build_vs2022.bat  check_opencv.cpp  diagnose_cuda.bat  diagnose_cuda.cpp  diagnose_cuda_detail.bat  diagnose_cuda_detail.cpp  force_rebuild.bat  force_rebuild2.bat  optimization_plan.md  rebuild_now.bat  run_debug.bat  run_opencv_cuda_test.bat  run_with_cuda.bat  start_vs2022_exp.bat  temp_build.bat  test_opencv_cuda.bat  改造建议生成.md
.claude/: settings.local.json
cmake/: CodeCoverage.cmake  GoogleTest.cmake
docs/: 00-开发环境配置.md  ALGORITHM_TESTS_SUMMARY.md  BATCH_PROCESS_WORKER_INTEGRATION.md  CI_CD_GUIDE.md  CI_CD_SUMMARY.md  FRONTEND_USER_MANUAL.md  (+29 more)
src/: CMakeLists.txt  main.cpp
src/algorithm/: AIDetectionTool.cpp  AlignmentOutputTool.cpp  BlobTool.cpp  BlurTool.cpp  CMakeLists.txt  CalcCenterTool.cpp  CalcOrientationTool.cpp  CalibrationManager.cpp  CalibrationResult.cpp  CameraCalibTool.cpp  CircleTool.cpp  CodeReadTool.cpp  ColorConvertTool.cpp  CoordinateTransform.cpp  CornerSearchTool.cpp  EdgeDetectionTool.cpp  EdgeTool.cpp  FindEdgeTool.cpp  GrayTool.cpp  LineTool.cpp  LogicOperationTool.cpp  MeasureAngleTool.cpp  MeasureAreaTool.cpp  MeasureDistanceTool.cpp  MorphologyTool.cpp  MultiPointAlignmentTool.cpp  NinePointCalibTool.cpp  PLCOutputTool.cpp  PatternSearchTool.cpp  QuickSearchTool.cpp  ROITool.cpp  RangeJudgeTool.cpp  SaveImageTool.cpp  ShapeMatchImpl.h  ShapeMatchTool.cpp  ShapeMatchUtils.cpp  ShapeModelManager.cpp  SubPixelEdgeTool.cpp  TemplateMatchTool.cpp  ThresholdTool.cpp  (+3 more)
src/algorithm/ai/: AIModelManager.cpp  AnomalyDetector.cpp  CMakeLists.txt  InferenceEngine.cpp  InstanceSegmentation.cpp  OCREngine.cpp  ONNXRuntimeEngine.cpp  TensorRTEngine.cpp  YOLODetector.cpp
src/algorithm/backend/: AlgorithmBackendFactory.cpp  HalconBlobAnalyzer.cpp  HalconCircleDetector.cpp  HalconLineDetector.cpp  OpenCVBlobAnalyzer.cpp  OpenCVCircleDetector.cpp  OpenCVLineDetector.cpp
src/algorithm3d/: Algorithm3DTypes.cpp  CMakeLists.txt  Calibration3D.cpp  DepthMap.cpp  Measurement3D.cpp  PointCloud3D.cpp
src/base/: AlignedMemory.cpp  ApplicationWatchdog.cpp  CMakeLists.txt  ConfigManager.cpp  CrashHandler.cpp  DataExporter.cpp  ErrorRecovery.cpp  GPUAccelerator.cpp  ImageData.cpp  ImageMemoryPool.cpp  Logger.cpp  OTAUpdater.cpp  ParallelProcessor.cpp  PerformanceMonitor.cpp  PermissionManager.cpp  PluginManager.cpp  PoolPerformanceMonitor.cpp  ScopedImagePtr.cpp  SystemMonitor.cpp  SystemResourceMonitor.cpp  TranslationManager.cpp
src/calibration/: AlignmentEngine.cpp  CMakeLists.txt  CalibrationManager.cpp  CalibrationTypes.cpp  QRCodeCalibration.cpp
src/comm/: CMakeLists.txt  KeyencePCLinkComm.cpp  LightController.cpp  LightControllerManager.cpp  MitsubishiMCComm.cpp  ModbusRTUComm.cpp  ModbusTCPComm.cpp  OPCUAClient.cpp  PLCComm.cpp  PLCManager.cpp
src/core/: CMakeLists.txt  ModelPreloader.cpp  MultiStationManager.cpp  PositionCameraBinding.cpp  PositionToolChainManager.cpp  Recipe.cpp  RecipeManager.cpp  SceneConfig.cpp  SceneManager.cpp  StationConfig.cpp  TaskScheduler.cpp  ToolChain.cpp  VisionEngine.cpp  VisionProject.cpp  WorkStation.cpp
src/hal/: BaslerCamera.cpp  CMakeLists.txt  CameraFactory.cpp  CameraManager.cpp  GPIOController.cpp  GenTLCamera.cpp  HikvisionCamera.cpp  SimulatedCamera.cpp  SimulatedMotionController.cpp
src/platform/: CMakeLists.txt  CoordPosition.cpp  PlatformConfig.cpp  PlatformTypes.cpp
src/plc/: CMakeLists.txt  EtherCATMaster.cpp  PLCClient.cpp  PLCProtocol.cpp  PLCTypes.cpp
src/remote/: CMakeLists.txt  PerformanceMonitor.cpp  RBACManager.cpp  RemoteDatabaseManager.cpp  RemoteLogCollector.cpp  RemoteProtocol.cpp  SecurityCertificateManager.cpp  SecurityManager.cpp  TokenAuthManager.cpp  WebSocketServer.cpp
src/test/: HighFrequencyBatchScenario.cpp  StabilityTestFramework.cpp
src/tools/: CMakeLists.txt  StationConfigToolMain.cpp
src/ui/: AIDetectionToolDialog.cpp  AlignmentOutputDialog.cpp  BatchProcessWorker.cpp  BlobToolDialog.cpp  BlurToolDialog.cpp  CMakeLists.txt  CalcCenterToolDialog.cpp  CalcOrientationToolDialog.cpp  CalibrationWizard.cpp  CameraCalibDialog.cpp  CameraConfigDialog.cpp  CameraSetupDialog.cpp  CircleToolDialog.cpp  CodeReadToolDialog.cpp  ColorConvertToolDialog.cpp  CornerSearchToolDialog.cpp  EdgeToolDialog.cpp  FindEdgeToolDialog.cpp  GrayToolDialog.cpp  HalconDisplayWorker.cpp  HalconImageViewer.cpp  HalconUtils.cpp  HistoryPanel.cpp  ImageSourceDialog.cpp  ImageViewer.cpp  InfoBar.cpp  LineToolDialog.cpp  LogicOperationToolDialog.cpp  LoginDialog.cpp  MainWindow.cpp  ManualDebugDialog.cpp  MeasureAngleToolDialog.cpp  MeasureAreaToolDialog.cpp  MeasureDistanceToolDialog.cpp  ModelCheckPointDialog.cpp  MorphologyToolDialog.cpp  MultiCameraManagerDialog.cpp  MultiCameraView.cpp  MultiPointAlignmentDialog.cpp  NinePointCalibDialog.cpp  (+37 more)
test/: CMakeLists.txt  TestUtils.cpp  TestUtils.h  test_AI_gtest.cpp  test_AdvancedTools_gtest.cpp  test_Algorithm3D_gtest.cpp  test_BasicImageProcessing_gtest.cpp  test_CalculationTools_gtest.cpp  test_Calibration_gtest.cpp  test_ConfigManager.cpp  test_EdgeAndMorphology_gtest.cpp  test_ErrorRecovery.cpp  test_GPUAccelerator.cpp  test_ImageData.cpp  test_ImageData_gtest.cpp  test_ImageMemoryPool.cpp  test_Logger.cpp  test_LogicTools_gtest.cpp  test_MatchingTools_gtest.cpp  test_Measurement_gtest.cpp  test_PLC_gtest.cpp  test_ParallelProcessor.cpp  test_Platform_gtest.cpp  test_RBACManager_gtest.cpp  test_ScopedImagePtr.cpp  test_SecurityManager_gtest.cpp  test_ShapeDetection_gtest.cpp  test_TokenAuthManager_gtest.cpp  test_ToolChain.cpp  test_VisionTool.cpp  test_sql_driver.cpp
test/scripts/: analyze_results.py  run_72h_test.py
(+1393 files in other folders)
